--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
         <title>
             Javascript Engine
         </title>
-
-        <script src="libraries/test.js"></script>
     </head>
 
     <body>
+        <canvas id="game">
 
+        </canvas>
+
+        <script src="libraries/core.js"></script>
     </body>
 </html>
