--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
         </canvas>
 
         <script src="libraries/core.js"></script>
+        <script src="libraries/loop.js"></script>
     </body>
 </html>
