--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
         <title>
             Javascript Engine
         </title>
-    </head>
-
-    <body>
-        <canvas id="game">
-
-        </canvas>
 
         <script src="libraries/core.js"></script>
         <script src="libraries/sprite.js"></script>
         <script src="libraries/loop.js"></script>
         <script src="libraries/init.js"></script>
+    </head>
+
+    <body onload="loadGame()">
+        <canvas id="game">
+        </canvas>
+        <script src="game.js"></script>
     </body>
 </html>
