--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="libraries/sprite.js"></script>
         <script src="libraries/loop.js"></script>
         <script src="libraries/init.js"></script>
+        <script src="libraries/keybinds.js"></script>
     </head>
 
     <body onload="loadGame()">
