--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <script src="libraries/loop.js"></script>
         <script src="libraries/init.js"></script>
         <script src="libraries/keybinds.js"></script>
+        <script src="libraries/entity.js"></script>
+        <script src="libraries/player.js"></script>
     </head>
 
     <body onload="loadGame()">
