--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script src="libraries/loop.js"></script>
         <script src="libraries/init.js"></script>
         <script src="libraries/keybinds.js"></script>
+        <script src="libraries/background.js"></script>
     </head>
 
     <body onload="loadGame()">
